--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Game Exports/Storyteller v0.9.2.exe"
+export_path="../../Game Exports/Storyteller v0.9.3.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
