--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -37,7 +37,7 @@ application/console_wrapper_icon="res://icon.svg"
 application/icon_interpolation=0
 application/file_version=""
 application/product_version=""
-application/company_name="ArrowDual Studios"
+application/company_name="ARDA Studios"
 application/product_name="Storyteller: Narrative Impact"
 application/file_description=""
 application/copyright=""
